# TinyRL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  benchmark_harness.py  codegen.py  dispatcher_cli.py  distill.py  mkdocs.yml  monitor_cli.py  prune.py  pyproject.toml  quantize.py  reproduce.sh  requirements-dev.txt  requirements.txt  test_comprehensive.py  train.py  verify_cli.py
.github/: dependabot.yml
.github/workflows/: ci-python.yml  ci-ui.yml  ci.yml
configs/train/: a2c_lunarlander.yaml  ppo_cartpole.yaml
docs/: ENGINEERING_CHARTER.md  architecture.drawio  data_flow_spec.md  index.md  quickstart.md
docs/api/: codegen.md  dispatcher.md  distillation.md  models.md  pruning.md  quantization.md  training.md  utils.md  verification.md
docs/architecture/: data_flow.md  memory_layout.md  overview.md  performance.md
docs/development/: benchmarking.md  cicd.md  contributing.md  testing.md
docs/examples/: arduino_integration.md  cartpole_training.md  lunarlander_training.md  rust_integration.md
docs/javascripts/: mathjax.js
docs/reference/: cli.md  configuration.md  faq.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/user_guide/: codegen.md  dispatcher.md  distillation.md  pruning.md  quantization.md  training.md  verification.md
scripts/: generate_sbom.py  release.py
security/: threat_model.md
tests/: test_codegen.py  test_dispatcher.py  test_distillation.py  test_pruning.py  test_quantization.py  test_training.py
tinyrl/: __init__.py  callbacks.py  codegen.py  dispatcher.py  distillation.py  models.py  monitoring.py  pruning.py  quantization.py  train.py  utils.py  verification.py
ui/: COMPREHENSIVE_TEST_SUMMARY.md  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/.github/workflows/: ci.yml
ui/.next/: prerender-manifest.js  routes-manifest.json
ui/.storybook/: main.ts  preview.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/artifacts/: page.tsx
ui/src/app/fleet/: page.tsx
ui/src/app/pipelines/: page.tsx
ui/src/app/projects/: page.tsx
ui/src/app/test-components/: page.tsx
ui/src/components/: flash-wizard.tsx  pipeline-dag.tsx  proof-viewer.tsx
ui/src/components/charts/: radial-gauge.stories.tsx  radial-gauge.tsx  reward-episode-chart.tsx  sparkline-chart.tsx
ui/src/components/layout/: command-palette.tsx  sidebar.tsx  top-nav.tsx
ui/src/hooks/: use-sidebar-store.ts
ui/src/lib/: utils.ts
ui/src/types/: index.ts
ui/tests/accessibility/: a11y.spec.ts
ui/tests/e2e/: critical-paths.spec.ts  navigation.spec.ts
ui/tests/performance/: performance.spec.ts
(+10 files in other folders)
