[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyrl"
description = "Reinforcement learning library for microcontrollers and embedded systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "TinyRL Contributors" }]
dynamic = ["version"]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.1.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.0",
    "hydra-colorlog>=1.2.0",
    "omegaconf>=2.3.0",
    "torchao>=0.1.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.6.0",
    "mypy>=1.5.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.4.0",
    "types-requests>=2.31.0",
    "pyright>=1.1.378",
    "pylint>=3.0.0",
    "cyclonedx-bom>=4.0.0",
    "cyclonedx-python-lib>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-material-extensions>=1.3.0",
    "pymdown-extensions>=10.0.0",
]
atari = ["ale-py>=0.11.2", "AutoROM>=0.6.0"]
mujoco = ["mujoco>=2.3.0"]
embedded = ["pyserial>=3.5", "pyocd>=0.34.0"]
verify = ["z3-solver>=4.12.0"]

[tool.setuptools.dynamic]
version = { attr = "tinyrl.__version__" }

[tool.setuptools.packages.find]
include = ["tinyrl*"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["tinyrl", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Legacy ML/embedded modules: tighten incrementally.
extend-ignore = [
    "B006",
    "E501",
    "E712",
    "F841",
    "SIM102",
    "SIM117",
    "UP038",
]

[tool.ruff.lint.per-file-ignores]
"tinyrl/verification.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = ["wandb.*", "hydra.*", "omegaconf.*", "stable_baselines3.*", "gymnasium.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests",
    "integration: cross-module or I/O tests",
    "slow: long-running training or benchmarks",
]
addopts = "-ra -q"

[tool.bandit]
exclude_dirs = ["tests", "ui", "build", "dist"]
skips = ["B404", "B603"]

[tool.coverage.run]
source = ["tinyrl"]
omit = ["*/tests/*"]
